# skills-rs

./: .gitignore  CLAUDE.md  README.md
rs/: Cargo.toml
rs/src/: errors.rs  lib.rs  main.rs  models.rs  parser.rs  prompt.rs  validator.rs  writer.rs
rs/tests/: test_parser.rs  test_prompt.rs  test_validator.rs  test_writer.rs
rs/tests/common/: mod.rs
