[package]
name = "skills-ref"
version = "0.1.0"
edition = "2021"
description = "Reference library for Agent Skills specification"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
